Fix dropdown caret not showing

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -27,6 +27,10 @@
   padding-bottom: 12px;
   border-bottom: 1px solid rgba(128, 128, 128, 0.2);
 
+  .Button--icon .Button-caret {
+    display: inline-block;
+  }
+
   .SocialFormControl {
     height: 36px;
     padding: 0 13px;
@@ -63,10 +67,6 @@
       width: 36px;
       padding-left: 8px;
       padding-right: 8px;
-
-      .Button--caret {
-        display: inline-block;
-      }
     }
 
     &-item {
